@@ -32,6 +32,8 @@ import static java.util.stream.Collectors.toSet;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.geotools.geojson.GeoJSON;
 import org.hisp.dhis.analytics.AggregationType;
@@ -40,7 +42,6 @@ import org.hisp.dhis.trackedentity.TrackedEntityInstance;
 import org.opengis.geometry.primitive.Point;
 
 import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlRootElement;
-import com.google.common.collect.ImmutableSet;
 
 /**
  * @author Lars Helge Overland
@@ -76,29 +77,33 @@ public enum ValueType
     IMAGE( String.class, false, FileTypeValueOptions.class ),
     GEOJSON( GeoJSON.class, false );
 
-    public static final Set<ValueType> INTEGER_TYPES = ImmutableSet.of(
+    private static final Set<ValueType> INTEGER_TYPES = Set.of(
         INTEGER, INTEGER_POSITIVE, INTEGER_NEGATIVE, INTEGER_ZERO_OR_POSITIVE );
 
-    public static final Set<ValueType> DECIMAL_TYPES = ImmutableSet.of(
+    private static final Set<ValueType> DECIMAL_TYPES = Set.of(
         NUMBER, UNIT_INTERVAL, PERCENTAGE );
 
-    public static final Set<ValueType> BOOLEAN_TYPES = ImmutableSet.of(
+    private static final Set<ValueType> BOOLEAN_TYPES = Set.of(
         BOOLEAN, TRUE_ONLY );
 
-    public static final Set<ValueType> TEXT_TYPES = ImmutableSet.of(
+    public static final Set<ValueType> TEXT_TYPES = Set.of(
         TEXT, LONG_TEXT, LETTER, TIME, USERNAME, EMAIL, PHONE_NUMBER, URL );
 
-    public static final Set<ValueType> DATE_TYPES = ImmutableSet.of(
+    public static final Set<ValueType> DATE_TYPES = Set.of(
         DATE, DATETIME, AGE );
 
-    public static final Set<ValueType> FILE_TYPES = ImmutableSet.of(
+    private static final Set<ValueType> FILE_TYPES = Set.of(
         FILE_RESOURCE, IMAGE );
 
-    public static final Set<ValueType> GEO_TYPES = ImmutableSet.of(
+    private static final Set<ValueType> GEO_TYPES = Set.of(
         COORDINATE, GEOJSON );
 
-    public static final Set<ValueType> NUMERIC_TYPES = ImmutableSet.<ValueType> builder().addAll(
-        INTEGER_TYPES ).addAll( DECIMAL_TYPES ).build();
+    private static final Set<ValueType> JSON_TYPES = Set.of(
+        GEOJSON );
+
+    public static final Set<ValueType> NUMERIC_TYPES = Stream.concat( INTEGER_TYPES.stream(), DECIMAL_TYPES.stream() )
+        .collect(
+            Collectors.toUnmodifiableSet() );
 
     @Deprecated
     private final Class<?> javaClass;
@@ -181,6 +186,11 @@ public enum ValueType
     public boolean isNumeric()
     {
         return NUMERIC_TYPES.contains( this );
+    }
+
+    public boolean isJson()
+    {
+        return JSON_TYPES.contains( this );
     }
 
     public boolean isAggregatable()
